manambahkan apa pun yang lu mau

--- a/ingut.html
+++ b/ingut.html
@@ -12,5 +12,11 @@
         <li>hut</li>
         <li>b5</li>
     </ul>
+    <p>kanguru</p>
+    <ul>
+        <li>makan ayam</li>
+        <li>terserah apa aja yang lu mau</li>
+        <li>nex lanjut kan amanah mu dasar botak</li>
+    </ul>
 </body>
 </html>
